--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "apollo-boost": "^0.3.1",
+    "apollo-link-state": "^0.4.2",
     "expo": "^32.0.0",
     "react": "16.5.0",
+    "react-apollo": "^2.5.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9"
   },
