fix background color in app.json added node-sass and react-native-sass transformer and made styles folder

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#070707"
+      "backgroundColor": "#f0f0f0"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
