--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "node-sass": "^4.11.0",
+    "react-native-sass-transformer": "^1.4.0"
   },
   "private": true
 }
