node-sass-transformer set up in app.json

--- a/app.json
+++ b/app.json
@@ -16,6 +16,15 @@
       "resizeMode": "contain",
       "backgroundColor": "#f0f0f0"
     },
+    "packagerOpts": {
+      "sourceExts": [
+        "js",
+        "jsx",
+        "scss",
+        "sass"
+      ],
+      "transformer": "node_modules/react-native-sass-transformer/index.js"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
