--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.5.0",
     "react-apollo": "^2.5.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
